# bingo-teams

./: .gitignore  Cargo.toml  README.md  todo.txt
input/: usernames_bingo.csv  usernames_test.csv
output/: weighted_players.csv
src/: data_structures.rs  helpers.rs  main.rs  make_players.rs  make_teams.rs  weight_players.rs
