[package]
name = "bingo-teams"
version = "0.1.0"
authors = ["Alexander Campbell <alexander.wesley.campbell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1.6.0", features = ["full"] }
serde_derive = "1.0.126"
serde_json = "1.0.61"
serde = "1.0.119"